color contrast fixed

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,7 +13,8 @@ $clr-primary-darkmode: lighten($clr-primary, 75%);
 $clr-secondary: #d1dbbd;
 $clr-light: #fcfff5;
 $clr-dark: darken(#193441, 5%);
-$clr-bg-dark: darken(#91aa9d, 15%);
+$clr-theme-light: #1a623d;
+$clr-theme-dark: #5fc9ae;
 $font-heading: Merriweather, serif;
 $font-subheading: Oswald, sans-serif;
 $font-primary: Roboto, sans-serif;
@@ -109,13 +110,13 @@ body.light {
     margin-left: 2.5vmin;
     img {
       //border-radius: 2.5vmin;
-      color: $clr-bg-dark;
-      outline: 0.25vmin solid transparentize($clr-bg-dark, 0.375);
+      color: $clr-theme-light;
+      outline: 0.25vmin solid transparentize($clr-theme-light, 0.375);
       outline-offset: 2.5vmin;
     }
     figcaption {
       font-size: 0.9em;
-      color: $clr-bg-dark;
+      color: $clr-theme-light;
       //margin-top: -1em;
     }
   }
@@ -131,7 +132,7 @@ body.light {
   }
   blockquote {
     background: darken($clr-light, 5%);
-    border-left: 2px solid $clr-bg-dark;
+    border-left: 2px solid $clr-theme-light;
     padding: 1.5vmax;
     padding-left: 2em;
     max-width: 65%;
@@ -139,6 +140,8 @@ body.light {
       font-family: $font-heading;
       font-size: 0.8em;
       font-weight: 400;
+      max-width: inherit;
+      //color: blue;
     }
   }
   @media (max-width: $tablet-bp) {
@@ -211,19 +214,19 @@ body.dark {
     text-decoration: none;
     .fa {
       //fa when container link is hovered
-      color: $clr-primary-brightened;
+      color: lighten($clr-primary-brightened, 25%);
     }
     h2 {
-      color: $clr-primary-brightened;
+      color: lighten($clr-primary-brightened, 25%);
     }
     p {
-      color: $clr-primary-brightened;
+      color: lighten($clr-primary-brightened, 25%);
     }
   }
   .activeLink {
-    color: $clr-primary-brightened;
+    color: lighten($clr-primary-brightened, 25%);
     i {
-      color: $clr-primary-brightened;
+      color: lighten($clr-primary-brightened, 25%);
     }
   }
   .fa {
@@ -238,13 +241,13 @@ body.dark {
     margin-left: 2.5vmin;
     img {
       //border-radius: 2.5vmin;
-      color: $clr-bg-dark;
-      outline: 0.25vmin solid transparentize($clr-bg-dark, 0.375);
+      color: $clr-theme-dark;
+      outline: 0.25vmin solid transparentize($clr-theme-dark, 0.375);
       outline-offset: 2.5vmin;
     }
     figcaption {
       font-size: 0.9em;
-      color: $clr-bg-dark;
+      color: $clr-theme-dark;
       //margin-top: -1em;
       //text-indent: 1em;
     }
@@ -261,7 +264,7 @@ body.dark {
   }
   blockquote {
     background: lighten($clr-dark, 5%);
-    border-left: 2px solid $clr-bg-dark;
+    border-left: 2px solid $clr-theme-dark;
     padding: 1.5vmax;
     padding-left: 2em;
     max-width: 65%;
@@ -279,6 +282,19 @@ body.dark {
   @media (max-width: $mobile-bp) {
     blockquote {
       max-width: 100%;
+    }
+  }
+  .blogContent {
+    a {
+      color: $clr-theme-dark;
+    }
+    a:hover {
+      color: saturate($clr-theme-dark, 5%);
+    }
+    blockquote {
+      p {
+        max-width: 100%;
+      }
     }
   }
   footer {
@@ -311,7 +327,7 @@ header {
         padding-right: 0.75em;
         border-right: 2px solid $clr-secondary;
         i {
-          color: $clr-bg-dark;
+          color: $clr-theme-light;
           margin-right: 0.35em;
         }
       }
@@ -408,11 +424,11 @@ header {
   }
   section {
     a {
-      color: saturate($clr-bg-dark, 25%);
+      color: $clr-theme-light;
       text-decoration: underline;
     }
     a:hover {
-      color: saturate($clr-bg-dark, 5%);
+      color: saturate($clr-theme-light, 5%);
       text-decoration: underline;
     }
   }
@@ -421,7 +437,7 @@ header {
 // blog page blog.js
 .blogContainer {
   height: fit-content;
-  //outline: 0.25vmin solid transparentize($clr-bg-dark, 0.375);
+  //outline: 0.25vmin solid transparentize($clr-theme-light, 0.375);
   //outline-offset: 2.5vmin;
   ul {
     display: flex;
@@ -446,10 +462,10 @@ header {
         max-width: 65%;
         margin: inherit;
         padding: inherit;
-        color: $clr-bg-dark;
+        color: $clr-theme-light;
       }
       a:hover p {
-        color: darken($clr-bg-dark, 15%);
+        color: darken($clr-theme-light, 15%);
       }
       @media (max-width: $tablet-bp) {
         h2 {
@@ -511,6 +527,14 @@ header {
       margin-top: 1em;
       margin-bottom: 0.5em;
     }
+    a {
+      color: $clr-theme-light;
+      text-decoration: underline;
+    }
+    a:hover {
+      color: saturate($clr-theme-light, 5%);
+      text-decoration: underline;
+    }
     h1,
     h2,
     p,
@@ -536,6 +560,11 @@ header {
         max-width: 100%;
       }
     }
+    blockquote {
+      p {
+        max-width: 100%;
+      }
+    }
   }
 }
 
@@ -550,7 +579,7 @@ header {
   .flexContact {
     height: fit-content;
     padding: 2.5vmax;
-    border: 0.25vmin solid transparentize($clr-bg-dark, 0.375);
+    border: 0.25vmin solid transparentize($clr-theme-light, 0.375);
     a,
     span {
       display: flex;
